# slime-webgpu

./: Cargo.toml  RELEASE.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
src/shaders/: diffuse.wgsl  draw.wgsl  scaling.wgsl  shader.wgsl  slime.wgsl
