[package]
name = "slime-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
winit = "0.28"
pollster = "0.2.5"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.1"
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.3"
