[package]
name = "slime-webgpu"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "26.0", features = ["vulkan-portability"] }
winit = "0.30"
pollster = "0.4"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.23", features = ["derive"] }
cgmath = "0.18"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
